# party_parrot

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  build.sh  color_cycle.cpp  color_cycle.h  main.cpp  readme.md  rotate_hue.cpp  rotate_hue.h
docs/: color_cycle.js  color_cycle_asm.js  demo.html  index.html  readme.md
docs_wasm/: color_cycle.js  color_cycle_asm.js  color_cycle_asm.wasm  color_cycle_worker.js  demo.html  server.js
web/: color_cycle.js  color_cycle_js.cpp  index.html  rotate_hue_js.cpp
